Modify css to fix overflow

--- a/style.css
+++ b/style.css
@@ -220,7 +220,6 @@ h1 span {
   margin-bottom: 30px;
   background-repeat: no-repeat, no-repeat;
   background-position: top right, bottom left;
-  width: 100%;
   position: relative;
 }
 
@@ -284,16 +283,13 @@ h1 span {
 }
 
 .contact {
-  background: no-repeat 100% 90% url(./images/illustration-contact-form.png);
-  transform: translateX(20px);
-  width: 375px;
-  height: 879px;
+  background: no-repeat 100% 100% url(./images/illustration-contact-form.png);
   padding: 64px 24px 64px 24px;
+
 }
 
 .contact h3 {
   height: 363px;
-  width: 327px;
   font-size: 40px;
   font-weight: 700;
   line-height: 52px;
@@ -303,7 +299,7 @@ h1 span {
 
 input {
   height: 48px;
-  width: 327px;
+  width: 300px;
   border-radius: 4px;
   margin-top: 20px;
   padding: 15px;
@@ -311,9 +307,10 @@ input {
 
 textarea {
   height: 114px;
-  width: 327px;
+  width: 300px;
   border-radius: 4px;
   margin-top: 20px;
+  margin-bottom: 20px;
   padding: 15px;
   color: #091e42;
   font-size: 15px;
@@ -327,7 +324,8 @@ textarea {
   width: 129px;
   border-radius: 4px;
   padding: 12px;
-  transform: translateX(100px);
+  display: flex;
+  margin: auto;
   color: white;
   font-size: 17px;
   font-weight: 500;
